--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vue3-snackbar",
-	"version": "1.0.3",
+	"version": "1.1.0",
 	"author": "Craig Riley",
 	"scripts": {
 		"build": "vite build -c vite-build.config.js",
@@ -20,24 +20,26 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.14.6",
-		"@mdi/js": "^5.9.55",
-		"@vitejs/plugin-vue": "^1.2.3",
+		"@mdi/js": "^6.5.95",
+		"@vitejs/plugin-vue": "^2.0.1",
+		"@vuetify/vite-plugin": "^1.0.0-alpha.3",
 		"@vue/compiler-sfc": "^3.0.0",
 		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.2.2",
-		"eslint": "^7.30.0",
-		"eslint-plugin-vue": "^7.0.0-beta.4",
+		"eslint": "^8.6.0",
+		"eslint-plugin-vue": "^8.2.0",
 		"gh-pages": "^3.2.3",
 		"postcss": "^8.3.5",
 		"prismjs": "^1.24.1",
 		"roboto-fontface": "*",
-		"sass": "~1.32.0",
-		"sass-loader": "^10.0.0",
+		"sass": "^1.45.2",
+		"sass-loader": "^12.4.0",
 		"vite": "^2.3.7",
 		"vue": "^3.0.0",
 		"vue-cli-plugin-vuetify": "~2.4.1",
 		"vue-loader": "^16.3.0",
-		"vuetify": "^3.0.0-alpha.9"
+		"vuetify": "^3.0.0-alpha.9",
+		"vuetify-loader": "^2.0.0-alpha.9"
 	},
 	"peerDependencies": {
 		"vue": "^3.0.0"
