--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vue3-snackbar",
-	"version": "1.1.2",
+	"version": "2.0.0",
 	"author": "Craig Riley",
 	"scripts": {
 		"build": "vite build -c vite-build.config.js",
@@ -8,8 +8,15 @@
 		"demo:build": "vite build",
 		"demo:deploy": "gh-pages -d demo/dist"
 	},
-	"main": "./dist/vue3-snackbar.umd.js",
+	"main": "./dist/vue3-snackbar.cjs.js",
 	"module": "./dist/vue3-snackbar.es.js",
+	"exports": {
+		".": {
+			"import": "./dist/vue3-snackbar.es.js",
+			"require": "./dist/vue3-snackbar.cjs.js"
+		},
+		"./styles": "./dist/style.css"
+	},
 	"files": [
 		"dist"
 	],
@@ -18,21 +25,21 @@
 		"vue3-icon": "^2.0.0"
 	},
 	"devDependencies": {
-		"@mdi/js": "^6.5.95",
+		"@mdi/js": "^7.0.96",
 		"@vitejs/plugin-vue": "^2.0.1",
 		"@vue/compiler-sfc": "^3.0.0",
 		"@vuetify/vite-plugin": "^1.0.0-alpha.3",
 		"eslint": "^8.6.0",
 		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-vue": "^8.2.0",
-		"gh-pages": "^3.2.3",
+		"eslint-plugin-vue": "^9.3.0",
+		"gh-pages": "^4.0.0",
 		"postcss": "^8.4.5",
 		"prettier": "^2.5.1",
 		"prismjs": "^1.24.1",
 		"roboto-fontface": "*",
 		"sass": "^1.45.2",
-		"sass-loader": "^12.4.0",
-		"vite": "^2.3.7",
+		"sass-loader": "^13.0.2",
+		"vite": "^2.9.14",
 		"vue": "^3.2.25",
 		"vuetify": "^3.0.0-alpha.9",
 		"vuetify-loader": "^2.0.0-alpha.9"
