--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"author": "Craig Riley",
 	"scripts": {
 		"dev": "pnpm --filter '*-next' run dev",
-		"build": "vite build -c vite-build.config.js",
+		"build": "pnpm --filter '*-next' run build",
 		"demo": "vite",
 		"demo:build": "vite build",
 		"demo:deploy": "gh-pages -d demo/dist",
