--- a/src-next/package.json
+++ b/src-next/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "postcss-nested": "^6.0.1",
     "vite": "^4.4.8",
+    "vite-plugin-dts": "^3.5.1",
     "vue": "^3.3.4"
   }
 }
