--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vue3-snackbar",
-	"version": "2.2.0",
+	"version": "2.2.1",
 	"author": "Craig Riley",
 	"scripts": {
 		"build": "vite build -c vite-build.config.js",
@@ -9,7 +9,9 @@
 		"demo:build": "vite build",
 		"demo:deploy": "gh-pages -d demo/dist",
 		"prepublishOnly": "npm run build",
-		"preinstall": "npx only-allow pnpm"
+		"preinstall": "npx only-allow pnpm",
+        "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
+        "format": "prettier .  --write"
 	},
 	"type": "module",
 	"types": "./types.d.ts",
@@ -31,26 +33,27 @@
 		"vue3-icon": "^2.1.0"
 	},
 	"devDependencies": {
-		"@mdi/js": "^7.2.96",
-		"@vitejs/plugin-vue": "^4.2.3",
-		"eslint": "^8.46.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-vue": "^9.16.1",
-		"gh-pages": "^5.0.0",
+		"@mdi/js": "^7.4.47",
+		"@vitejs/plugin-vue": "^5.0.4",
+		"@vueuse/core": "^10.9.0",
+		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-vue": "^9.23.0",
+		"gh-pages": "^6.1.1",
 		"jsdoc": "^3.6.11",
 		"jsdoc-vuejs": "^4.0.0",
-		"postcss": "^8.4.27",
-		"prettier": "^3.0.1",
+		"postcss": "^8.4.38",
+		"postcss-nested": "^6.0.1",
+		"prettier": "^3.2.5",
 		"prismjs": "^1.29.0",
 		"roboto-fontface": "^0.10.0",
-		"sass": "^1.64.2",
-		"sass-loader": "^13.3.2",
+		"sass": "^1.72.0",
+		"sass-loader": "^13.3.3",
 		"tsd-jsdoc": "^2.5.0",
-		"vite": "^4.4.8",
-		"vite-plugin-vuetify": "^1.0.2",
-		"vue": "^3.3.4",
-		"vuetify": "^3.3.11",
-		"xo": "^0.39.1"
+		"vite": "^5.2.3",
+		"vite-plugin-vuetify": "^2.0.3",
+		"vue": "^3.4.21",
+		"vuetify": "^3.5.11"
 	},
 	"peerDependencies": {
 		"vue": "^3.0.0"
@@ -76,5 +79,6 @@
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/craigrileyuk/vue3-snackbar.git"
-	}
+	},
+	"packageManager": "pnpm@8.14.3+sha256.2d0363bb6c314daa67087ef07743eea1ba2e2d360c835e8fec6b5575e4ed9484"
 }
