--- a/package.json
+++ b/package.json
@@ -1,84 +1,85 @@
 {
-	"name": "vue3-snackbar",
-	"version": "2.2.2",
-	"author": "Craig Riley",
-	"scripts": {
-		"build": "vite build -c vite-build.config.js",
-		"build:types": "jsdoc src -c ./jsdoc-conf.json",
-		"demo": "vite",
-		"demo:build": "vite build",
-		"demo:deploy": "gh-pages -d demo/dist",
-		"prepublishOnly": "npm run build",
-		"preinstall": "npx only-allow pnpm",
-		"lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
-		"format": "prettier .  --write"
-	},
-	"type": "module",
-	"types": "./types.d.ts",
-	"main": "./dist/vue3-snackbar.cjs",
-	"module": "./dist/vue3-snackbar.js",
-	"exports": {
-		".": {
-			"require": "./dist/vue3-snackbar.cjs",
-			"import": "./dist/vue3-snackbar.js",
-			"browser": "./dist/vue3-snackbar.umd.cjs"
-		},
-		"./styles": "./dist/style.css"
-	},
-	"files": [
-		"dist"
-	],
-	"dependencies": {
-		"tiny-emitter": "^2.1.0",
-		"vue3-icon": "^2.1.0"
-	},
-	"devDependencies": {
-		"@mdi/js": "^7.4.47",
-		"@vitejs/plugin-vue": "^5.0.4",
-		"@vueuse/core": "^10.10.0",
-		"eslint": "^8.57.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-vue": "^9.26.0",
-		"gh-pages": "^6.1.1",
-		"jsdoc": "^3.6.11",
-		"jsdoc-vuejs": "^4.0.0",
-		"postcss": "^8.4.38",
-		"postcss-nested": "^6.0.1",
-		"prettier": "^3.2.5",
-		"prismjs": "^1.29.0",
-		"roboto-fontface": "^0.10.0",
-		"sass": "^1.77.2",
-		"sass-loader": "^13.3.3",
-		"tsd-jsdoc": "^2.5.0",
-		"vite": "^5.2.12",
-		"vite-plugin-vuetify": "^2.0.3",
-		"vue": "^3.4.27",
-		"vuetify": "^3.6.7"
-	},
-	"peerDependencies": {
-		"vue": "^3.0.0"
-	},
-	"browserslist": [
-		"> 1%",
-		"last 2 versions",
-		"not dead"
-	],
-	"bugs": {
-		"url": "https://github.com/craigrileyuk/vue3-snackbar/issues"
-	},
-	"homepage": "https://github.com/craigrileyuk/vue3-snackbar#readme",
-	"keywords": [
-		"Vue",
-		"Vue3",
-		"snackbar",
-		"toast",
-		"alerts",
-		"messages"
-	],
-	"license": "MIT",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/craigrileyuk/vue3-snackbar.git"
-	},
-	"packageManager": "pnpm@8.14.3+sha256.2d0363bb6c314daa67087ef07743eea1ba2e2d360c835e8fec6b5575e4ed9484"
+    "name": "vue3-snackbar",
+    "version": "2.2.2",
+    "author": "Craig Riley",
+    "scripts": {
+        "build": "npm run build:types && vite build -c vite-build.config.js",
+        "build:types": "npx -p typescript tsc",
+        "demo": "vite",
+        "demo:build": "vite build",
+        "demo:deploy": "gh-pages -d demo/dist",
+        "prepublishOnly": "npm run build",
+        "preinstall": "npx only-allow pnpm",
+        "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
+        "format": "prettier .  --write"
+    },
+    "type": "module",
+    "types": "./types.d.ts",
+    "main": "./dist/vue3-snackbar.cjs",
+    "module": "./dist/vue3-snackbar.js",
+    "exports": {
+        ".": {
+            "require": "./dist/vue3-snackbar.cjs",
+            "import": "./dist/vue3-snackbar.js",
+            "browser": "./dist/vue3-snackbar.umd.cjs"
+        },
+        "./styles": "./dist/style.css"
+    },
+    "files": [
+        "dist"
+    ],
+    "dependencies": {
+        "tiny-emitter": "^2.1.0",
+        "vue3-icon": "^2.1.0"
+    },
+    "devDependencies": {
+        "@mdi/js": "^7.4.47",
+        "@vitejs/plugin-vue": "^5.0.5",
+        "@vueuse/core": "^10.11.0",
+        "eslint": "^8.57.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-vue": "^9.26.0",
+        "gh-pages": "^6.1.1",
+        "jsdoc": "^4.0.3",
+        "jsdoc-vuejs": "^4.0.0",
+        "postcss": "^8.4.38",
+        "postcss-nested": "^6.0.1",
+        "prettier": "^3.3.2",
+        "prismjs": "^1.29.0",
+        "roboto-fontface": "^0.10.0",
+        "sass": "^1.77.6",
+        "sass-loader": "^13.3.3",
+        "tsd-jsdoc": "^2.5.0",
+        "typescript": "^5.5.2",
+        "vite": "^5.3.1",
+        "vite-plugin-vuetify": "^2.0.3",
+        "vue": "^3.4.30",
+        "vuetify": "^3.6.10"
+    },
+    "peerDependencies": {
+        "vue": "^3.0.0"
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not dead"
+    ],
+    "bugs": {
+        "url": "https://github.com/craigrileyuk/vue3-snackbar/issues"
+    },
+    "homepage": "https://github.com/craigrileyuk/vue3-snackbar#readme",
+    "keywords": [
+        "Vue",
+        "Vue3",
+        "snackbar",
+        "toast",
+        "alerts",
+        "messages"
+    ],
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/craigrileyuk/vue3-snackbar.git"
+    },
+    "packageManager": "pnpm@8.14.3+sha256.2d0363bb6c314daa67087ef07743eea1ba2e2d360c835e8fec6b5575e4ed9484"
 }
