--- a/package.json
+++ b/package.json
@@ -33,13 +33,15 @@
         "vue3-icon": "^2.1.0"
     },
     "devDependencies": {
+        "@eslint/js": "^9.6.0",
         "@mdi/js": "^7.4.47",
         "@vitejs/plugin-vue": "^5.0.5",
         "@vueuse/core": "^10.11.0",
-        "eslint": "^8.57.0",
+        "eslint": "^9.0.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-vue": "^9.27.0",
         "gh-pages": "^6.1.1",
+        "globals": "^15.8.0",
         "jsdoc": "^4.0.3",
         "jsdoc-vuejs": "^4.0.0",
         "postcss": "^8.4.39",
@@ -48,7 +50,7 @@
         "prismjs": "^1.29.0",
         "roboto-fontface": "^0.10.0",
         "sass": "^1.77.6",
-        "sass-loader": "^13.3.3",
+        "sass-loader": "^14.0.0",
         "tsd-jsdoc": "^2.5.0",
         "typescript": "^5.5.3",
         "vite": "^5.3.2",
