--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
     "name": "vue3-snackbar",
-    "version": "2.3.2",
+    "version": "2.3.3",
     "author": "Craig Riley",
     "scripts": {
         "build": "npm run build:types && vite build -c vite-build.config.js",
-        "build:types": "npx -p typescript tsc",
+        "build:types": "vue-tsc && cp ./src/global.d.ts ./types/global.d.ts && npm run copy-ref",
         "demo": "vite",
         "demo:build": "vite build",
         "demo:deploy": "gh-pages -d demo/dist",
         "prepublishOnly": "npm run build",
         "preinstall": "npx only-allow pnpm",
         "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
-        "format": "prettier .  --write"
+        "format": "prettier .  --write",
+        "copy-ref": "echo '/// <reference path=\"./global.d.ts\" />\n' | cat - ./types/index.d.ts > temp && mv temp ./types/index.d.ts"
     },
     "type": "module",
-    "types": "./types.d.ts",
+    "types": "./types/index.d.ts",
     "main": "./dist/vue3-snackbar.cjs",
     "module": "./dist/vue3-snackbar.js",
     "exports": {
@@ -26,37 +27,38 @@
         "./styles": "./dist/style.css"
     },
     "files": [
-        "dist"
+        "dist",
+        "types"
     ],
     "dependencies": {
         "tiny-emitter": "^2.1.0",
         "vue3-icon": "^2.1.0"
     },
     "devDependencies": {
-        "@eslint/js": "^9.6.0",
+        "@eslint/js": "^9.9.1",
         "@mdi/js": "^7.4.47",
-        "@vitejs/plugin-vue": "^5.0.5",
-        "@vueuse/core": "^10.11.0",
-        "eslint": "^9.0.0",
+        "@vitejs/plugin-vue": "^5.1.3",
+        "@vueuse/core": "^11.0.3",
+        "eslint": "^9.9.1",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-vue": "^9.27.0",
+        "eslint-plugin-vue": "^9.28.0",
         "gh-pages": "^6.1.1",
-        "globals": "^15.8.0",
+        "globals": "^15.9.0",
         "jsdoc": "^4.0.3",
         "jsdoc-vuejs": "^4.0.0",
-        "postcss": "^8.4.39",
-        "postcss-nested": "^6.0.1",
-        "prettier": "^3.3.2",
+        "postcss": "^8.4.45",
+        "postcss-nested": "^6.2.0",
+        "prettier": "^3.3.3",
         "prismjs": "^1.29.0",
         "roboto-fontface": "^0.10.0",
-        "sass": "^1.77.6",
-        "sass-loader": "^14.0.0",
-        "tsd-jsdoc": "^2.5.0",
-        "typescript": "^5.5.3",
-        "vite": "^5.3.2",
-        "vite-plugin-vuetify": "^2.0.3",
-        "vue": "^3.4.31",
-        "vuetify": "^3.6.11"
+        "sass": "^1.78.0",
+        "sass-loader": "^14.2.1",
+        "typescript": "^5.5.4",
+        "vite": "^5.4.3",
+        "vite-plugin-vuetify": "^2.0.4",
+        "vue": "^3.5.2",
+        "vue-tsc": "^2.1.6",
+        "vuetify": "^3.7.1"
     },
     "peerDependencies": {
         "vue": "^3.0.0"
@@ -67,9 +69,9 @@
         "not dead"
     ],
     "bugs": {
-        "url": "https://github.com/craigrileyuk/vue3-snackbar/issues"
+        "url": "https://github.com/evo-mark/vue3-snackbar/issues"
     },
-    "homepage": "https://github.com/craigrileyuk/vue3-snackbar#readme",
+    "homepage": "https://github.com/evo-mark/vue3-snackbar#readme",
     "keywords": [
         "Vue",
         "Vue3",
@@ -81,7 +83,7 @@
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/craigrileyuk/vue3-snackbar.git"
+        "url": "git+https://github.com/evo-mark/vue3-snackbar.git"
     },
     "packageManager": "pnpm@8.14.3+sha256.2d0363bb6c314daa67087ef07743eea1ba2e2d360c835e8fec6b5575e4ed9484"
 }
