--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,18 @@
 {
-    // Change this to match your project
-    "include": ["src/**/*.js"],
-    "compilerOptions": {
-      // Tells TypeScript to read JS files, as
-      // normally they are ignored as source files
-      "allowJs": true,
-      // Generate d.ts files
-      "declaration": true,
-      "skipLibCheck": true,
-      // This compiler run should
-      // only output d.ts files
-      "emitDeclarationOnly": true,
-      // Types should go into this directory.
-      // Removing this would place the .d.ts files
-      // next to the .js files
-      "outFile": "types.d.ts",
-      // go to js file when using IDE functions like
-      // "Go to Definition" in VSCode
-      "declarationMap": true
-    }
-  }
+	"include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.js", "src/**/*.vue"],
+	"module": "esnext",
+	"compilerOptions": {
+        "types": ["./src/global.d.ts"],
+		"target": "esnext",
+		"declaration": true,
+		"esModuleInterop": true,
+		"jsx": "preserve",
+		"allowJs": true,
+		"skipLibCheck": true,
+		"moduleResolution": "node",
+		"emitDeclarationOnly": true,
+		"allowSyntheticDefaultImports": true,
+		"outDir": "types",
+		"declarationMap": true
+	}
+}
