--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "scripts": {
         "build": "npm run build:types && vite build -c vite-build.config.js",
         "build:types": "vue-tsc && cp ./src/global.d.ts ./types/global.d.ts && npm run copy-ref",
-        "demo": "vite",
-        "demo:build": "vite build",
+        "demo": "pnpm --filter=demo run dev",
+        "demo:build": "pnpm --filter=demo run build",
         "demo:deploy": "gh-pages -d demo/dist",
         "prepublishOnly": "npm run build",
         "preinstall": "npx only-allow pnpm",
@@ -20,9 +20,10 @@
     "module": "./dist/vue3-snackbar.js",
     "exports": {
         ".": {
+            "browser": "./dist/vue3-snackbar.umd.cjs",
             "require": "./dist/vue3-snackbar.cjs",
             "import": "./dist/vue3-snackbar.js",
-            "browser": "./dist/vue3-snackbar.umd.cjs"
+            "types": "./types/index.d.ts"
         },
         "./styles": "./dist/style.css"
     },
@@ -32,33 +33,31 @@
     ],
     "dependencies": {
         "tiny-emitter": "^2.1.0",
-        "vue3-icon": "^2.1.0"
+        "vue3-icon": "^3.0.3"
     },
     "devDependencies": {
-        "@eslint/js": "^9.10.0",
+        "@eslint/js": "^9.17.0",
         "@mdi/js": "^7.4.47",
-        "@vitejs/plugin-vue": "^5.1.3",
-        "@vueuse/core": "^11.0.3",
-        "eslint": "^9.10.0",
+        "@vitejs/plugin-vue": "^5.2.1",
+        "@vueuse/core": "^12.2.0",
+        "eslint": "^9.17.0",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-vue": "^9.28.0",
-        "gh-pages": "^6.1.1",
-        "globals": "^15.9.0",
-        "jsdoc": "^4.0.3",
+        "eslint-plugin-vue": "^9.32.0",
+        "gh-pages": "^6.2.0",
+        "globals": "^15.14.0",
+        "jsdoc": "^4.0.4",
         "jsdoc-vuejs": "^4.0.0",
-        "postcss": "^8.4.45",
-        "postcss-nested": "^6.2.0",
-        "prettier": "^3.3.3",
+        "postcss": "^8.4.49",
+        "postcss-nested": "^7.0.2",
+        "prettier": "^3.4.2",
         "prismjs": "^1.29.0",
         "roboto-fontface": "^0.10.0",
-        "sass": "^1.78.0",
-        "sass-loader": "^14.2.1",
-        "typescript": "^5.6.2",
-        "vite": "^5.4.5",
-        "vite-plugin-vuetify": "^2.0.4",
-        "vue": "^3.5.5",
-        "vue-tsc": "^2.1.6",
-        "vuetify": "^3.7.1"
+        "sass": "^1.83.0",
+        "sass-loader": "^16.0.4",
+        "typescript": "^5.7.2",
+        "vite": "^6.0.6",
+        "vue": "^3.5.13",
+        "vue-tsc": "^2.2.0"
     },
     "peerDependencies": {
         "vue": "^3.0.0"
