--- a/demo/package.json
+++ b/demo/package.json
@@ -6,7 +6,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "preview": "vite preview"
     },
     "keywords": [],
     "author": "",
